--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "graphql": "^14.3.1",
+    "graphql-tools": "^4.0.5",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "pg": "^7.11.0",
     "typeorm": "^0.2.18",
     "uuid": "^3.3.2"
@@ -37,6 +39,7 @@
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
     "@types/jsonwebtoken": "^8.3.2",
+    "@types/lodash": "^4.14.138",
     "@types/pg": "^7.4.14",
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
