--- a/package.json
+++ b/package.json
@@ -55,8 +55,13 @@
     "tsconfig-paths": "^3.8.0",
     "typescript": "^3.5.2"
   },
+  "main": "./dist/server.js",
   "scripts": {
-    "start": "nodemon --exec ts-node index.ts",
+    "build-ts": "tsc",
+    "postinstall": "npm run build-ts",
+    "start": "npm run serve",
+    "serve": "node dist/server.js",
+    "start-dev": "nodemon --exec ts-node index.ts",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   }
 }
