--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hookah-notes/api",
-  "version": "0.1.0",
-  "description": "GraphQL API server for the HookahNotes application.",
+  "version": "0.1.1",
+  "description": "GraphQL API server for the Hookah Notes application.",
   "author": "Accura",
   "license": "MIT",
   "repository": {
@@ -16,55 +16,41 @@
       "config": "config/git/commitizen.config.js"
     }
   },
-  "dependencies": {
-    "apollo-server-express": "^2.7.0-alpha.3",
-    "bcrypt": "^3.0.6",
-    "chalk": "^2.4.2",
-    "cookie-parser": "^1.4.4",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "graphql": "^14.3.1",
-    "graphql-tools": "^4.0.5",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "pg": "^7.11.0",
-    "typeorm": "^0.2.18",
-    "uuid": "^3.3.2"
-  },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cookie-parser": "^1.4.1",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.17.0",
-    "@types/express-session": "^1.15.13",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/lodash": "^4.14.138",
-    "@types/pg": "^7.4.14",
-    "@types/uuid": "^3.4.4",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
+    "@types/express": "^4.17.1",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.3.4",
+    "@types/node": "^12.7.5",
     "cz-customizable": "^6.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^3.0.1",
-    "nodemon": "^1.19.1",
+    "eslint": "^6.4.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
-    "ts-node": "^8.3.0",
-    "tsconfig-paths": "^3.8.0",
-    "typescript": "^3.5.2"
+    "ts-node": "8.4.1",
+    "typescript": "3.6.3"
   },
-  "main": "./dist/index.js",
+  "dependencies": {
+    "apollo-server-express": "^2.9.3",
+    "bcrypt": "^3.0.6",
+    "chalk": "^2.4.2",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "graphql": "^14.5.6",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^7.3.0",
+    "reflect-metadata": "^0.1.10",
+    "type-graphql": "^0.17.5",
+    "typeorm": "0.2.19"
+  },
   "scripts": {
     "build-ts": "tsc",
-    "postinstall": "npm run build-ts",
+    "serve": "node ./build/index.js",
     "start": "yarn run serve",
-    "serve": "node ./dist/index.js",
-    "start-dev": "nodemon --exec ts-node index.ts",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "start-dev": "nodemon --exec ts-node src/index.ts"
   },
   "engines": {
-    "node": "11.12.0"
+    "node": "12.10.0"
   }
 }
