--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.3.4",
     "@types/node": "^12.7.5",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
     "cz-customizable": "^6.2.0",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
