--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.3.4",
@@ -37,6 +39,8 @@
     "apollo-server-express": "^2.9.3",
     "bcrypt": "^3.0.6",
     "chalk": "^2.4.2",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql": "^14.5.6",
