--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
+    "@types/ioredis": "^4.0.17",
     "@types/jsonwebtoken": "^8.3.4",
     "@types/node": "^12.7.5",
+    "@types/nodemailer": "^6.2.1",
+    "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "cz-customizable": "^6.2.0",
@@ -44,11 +47,14 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql": "^14.5.6",
+    "ioredis": "^4.14.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.3.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^0.17.5",
-    "typeorm": "0.2.19"
+    "typeorm": "0.2.19",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "build-ts": "tsc",
