--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.1",
     "@types/ioredis": "^4.0.17",
     "@types/jsonwebtoken": "^8.3.4",
+    "@types/lodash": "^4.14.139",
     "@types/node": "^12.7.5",
     "@types/nodemailer": "^6.2.1",
     "@types/uuid": "^3.4.5",
@@ -48,6 +49,7 @@
     "graphql": "^14.5.6",
     "ioredis": "^4.14.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "nodemailer": "^6.3.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
