chore(database): turn on logging option for the database errors and queries

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,7 +6,7 @@
   "password": "owner_password",
   "database": "hn",
   "synchronize": true,
-  "logging": false,
+  "logging": ["query", "error"],
   "entities": ["src/entity/**/*.ts"],
   "migrations": ["src/migration/**/*.ts"],
   "subscribers": ["src/subscriber/**/*.ts"],
