--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "@types/faker": "^4.1.5",
     "@types/ioredis": "^4.0.17",
+    "@types/jest": "^24.0.18",
     "@types/jsonwebtoken": "^8.3.4",
     "@types/lodash": "^4.14.139",
     "@types/node": "^12.7.5",
@@ -33,8 +35,11 @@
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "faker": "^4.1.0",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.1.0",
     "ts-node": "8.4.1",
     "typescript": "3.6.3"
   },
@@ -61,7 +66,9 @@
     "build-ts": "tsc",
     "serve": "node ./build/index.js",
     "start": "yarn run serve",
-    "start-dev": "nodemon --exec ts-node src/index.ts"
+    "start-dev": "nodemon --exec ts-node src/index.ts",
+    "db:setup": "ts-node src/utils/test/setup.ts",
+    "test": "npm run db:setup && jest --forceExit --detectOpenHandles"
   },
   "engines": {
     "node": "12.10.0"
