--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "eslint-plugin-prettier": "^3.1.1",
     "faker": "^4.1.0",
     "jest": "^24.9.0",
+    "jest-express": "^1.10.1",
     "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
+    "sinon": "^7.5.0",
+    "sinon-express-mock": "^2.2.1",
     "ts-jest": "^24.1.0",
     "ts-node": "8.4.1",
     "typescript": "3.6.3"
