--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "@hookah-notes/api",
   "version": "0.1.1",
   "description": "GraphQL API server for the Hookah Notes application.",
-  "author": "Accura",
+  "author": "a-marchenko",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/accuradev/hookah-notes-api.git"
+    "url": "git://github.com/a-marchenko/hookah-notes-api.git"
   },
   "config": {
     "commitizen": {
